# serializer version: 1
# name: test_all_entities[aux_ac][climate.aux_a_c_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': None,
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aux_a_c_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'bf53a150-f8a4-45d1-aac4-86252475d551_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[aux_ac][climate.aux_a_c_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.0,
      'fan_mode': 'auto',
      'fan_modes': None,
      'friendly_name': 'AUX A/C on-off',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 393>,
      'temperature': 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aux_a_c_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[bosch_radiator_thermostat_ii][climate.radiator_thermostat_ii_m_wohnzimmer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.radiator_thermostat_ii_m_wohnzimmer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '286ba274-4093-4bcb-849c-a1a3efe7b1e5_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[bosch_radiator_thermostat_ii][climate.radiator_thermostat_ii_m_wohnzimmer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.9,
      'friendly_name': 'Radiator Thermostat II [+M] Wohnzimmer',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.radiator_thermostat_ii_m_wohnzimmer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[da_ac_ehs_01001][climate.heat_pump_indoor1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 65,
      'min_temp': 26,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heat_pump_indoor1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '4165c51e-bf6b-c5b6-fd53-127d6248754b_INDOOR1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_ehs_01001][climate.heat_pump_indoor1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 18.5,
      'friendly_name': 'Heat pump INDOOR1',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 65,
      'min_temp': 26,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 35,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heat_pump_indoor1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ac_rac_000001][climate.ac_office_granit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_modes': list([
        'windFree',
      ]),
      'swing_modes': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.ac_office_granit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': '96a5ef74-5832-a84b-f1f7-ca799957065d_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_000001][climate.ac_office_granit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 25,
      'drlc_status_duration': 0,
      'drlc_status_level': -1,
      'drlc_status_override': False,
      'drlc_status_start': '1970-01-01T00:00:00Z',
      'fan_mode': 'low',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'AC Office Granit',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_mode': 'windFree',
      'preset_modes': list([
        'windFree',
      ]),
      'supported_features': <ClimateEntityFeature: 441>,
      'swing_mode': 'off',
      'swing_modes': None,
      'temperature': 25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.ac_office_granit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ac_rac_000003][climate.office_airfree-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_modes': list([
        'windFree',
      ]),
      'swing_modes': list([
        'off',
        'both',
        'vertical',
        'horizontal',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.office_airfree',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': 'c76d6f38-1b7f-13dd-37b5-db18d5272783_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_000003][climate.office_airfree-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 26,
      'drlc_status_duration': 0,
      'drlc_status_override': False,
      'fan_mode': 'low',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'Office AirFree',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_mode': None,
      'preset_modes': list([
        'windFree',
      ]),
      'supported_features': <ClimateEntityFeature: 441>,
      'swing_mode': 'off',
      'swing_modes': list([
        'off',
        'both',
        'vertical',
        'horizontal',
      ]),
      'temperature': 24,
    }),
    'context': <ANY>,
    'entity_id': 'climate.office_airfree',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_all_entities[da_ac_rac_01001][climate.aire_dormitorio_principal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_modes': list([
        'windFree',
      ]),
      'swing_modes': list([
        'off',
        'vertical',
        'horizontal',
        'both',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aire_dormitorio_principal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': '4ece486b-89db-f06a-d54d-748b676b4d8e_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_01001][climate.aire_dormitorio_principal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 27,
      'drlc_status_duration': 0,
      'drlc_status_level': 0,
      'drlc_status_override': False,
      'drlc_status_start': '1970-01-01T00:00:00Z',
      'fan_mode': 'high',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'Aire Dormitorio Principal',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_mode': None,
      'preset_modes': list([
        'windFree',
      ]),
      'supported_features': <ClimateEntityFeature: 441>,
      'swing_mode': 'off',
      'swing_modes': list([
        'off',
        'vertical',
        'horizontal',
        'both',
      ]),
      'temperature': 23,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aire_dormitorio_principal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ac_rac_100001][climate.corridor_a_c-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.corridor_a_c',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'F8042E25-0E53-0000-0000-000000000000_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_100001][climate.corridor_a_c-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 27,
      'fan_mode': 'auto',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'Corridor A/C',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 393>,
      'temperature': 18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.corridor_a_c',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub][climate.eco_heating_system_indoor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 65,
      'min_temp': 25,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.eco_heating_system_indoor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '1f98ebd0-ac48-d802-7f62-000001200100_INDOOR',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub][climate.eco_heating_system_indoor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.1,
      'friendly_name': 'Eco Heating System INDOOR',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 65,
      'min_temp': 25,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.eco_heating_system_indoor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub_1][climate.heat_pump_main_indoor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 65,
      'min_temp': 25,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heat_pump_main_indoor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '6a7d5349-0a66-0277-058d-000001200101_INDOOR',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub_1][climate.heat_pump_main_indoor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 31,
      'friendly_name': 'Heat Pump Main INDOOR',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 65,
      'min_temp': 25,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 30,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heat_pump_main_indoor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[da_sac_ehs_000002_sub][climate.warmepumpe_indoor1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.warmepumpe_indoor1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 384>,
    'translation_key': None,
    'unique_id': '3810e5ad-5351-d9f9-12ff-000001200000_INDOOR1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000002_sub][climate.warmepumpe_indoor1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 31.2,
      'friendly_name': 'Wärmepumpe INDOOR1',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 384>,
    }),
    'context': <ANY>,
    'entity_id': 'climate.warmepumpe_indoor1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_all_entities[da_sac_ehs_000002_sub][climate.warmepumpe_indoor2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.warmepumpe_indoor2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 384>,
    'translation_key': None,
    'unique_id': '3810e5ad-5351-d9f9-12ff-000001200000_INDOOR2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000002_sub][climate.warmepumpe_indoor2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 29.1,
      'friendly_name': 'Wärmepumpe INDOOR2',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 384>,
    }),
    'context': <ANY>,
    'entity_id': 'climate.warmepumpe_indoor2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[ecobee_thermostat][climate.main_floor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'on',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.main_floor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '028469cb-6e89-4f14-8d9a-bfbca5e0fbfc_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ecobee_thermostat][climate.main_floor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 32,
      'current_temperature': 21.7,
      'fan_mode': 'auto',
      'fan_modes': list([
        'on',
        'auto',
      ]),
      'friendly_name': 'Main Floor',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
      'supported_features': <ClimateEntityFeature: 395>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 21.7,
    }),
    'context': <ANY>,
    'entity_id': 'climate.main_floor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[ecobee_thermostat_offline][climate.downstairs-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': None,
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.downstairs',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '1888b38f-6246-4f1e-911b-bfcfb66999db_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ecobee_thermostat_offline][climate.downstairs-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'fan_mode': None,
      'fan_modes': None,
      'friendly_name': 'Downstairs',
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 395>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.downstairs',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[generic_ef00_v1][climate.thermostat_kuche-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat_kuche',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '656569c2-7976-4232-a789-34b4d1176c3a_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[generic_ef00_v1][climate.thermostat_kuche-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.0,
      'friendly_name': 'Thermostat Küche',
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat_kuche',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[heatit_ztrm3_thermostat][climate.hall_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.hall_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '69a271f6-6537-4982-8cd9-979866872692_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[heatit_ztrm3_thermostat][climate.hall_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.0,
      'friendly_name': 'Hall thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 19.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.hall_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[virtual_thermostat][climate.asd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'on',
      ]),
      'hvac_modes': list([
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.asd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '2894dc93-0f11-49cc-8a81-3a684cebebf6_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[virtual_thermostat][climate.asd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 4734.6,
      'fan_mode': 'followschedule',
      'fan_modes': list([
        'on',
      ]),
      'friendly_name': 'asd',
      'hvac_action': <HVACAction.COOLING: 'cooling'>,
      'hvac_modes': list([
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
      'supported_features': <ClimateEntityFeature: 395>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.asd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
